# chat_floem

./: .gitignore  Cargo.toml  arch.md  cc.txt
src/: common.rs  config.rs  element.rs  main.rs  util.rs
src/chunks/: chunks.rs  display.rs  mod.rs  tests.rs
src/cont/: acc.rs  msg.rs  room.rs
src/view_data/: editor.rs  mod.rs  msg.rs  room.rs  session.rs
src/views/: chunks.rs  msg.rs  msg_view.rs  msgs.rs  msgs_view.rs  room.rs  rooms.rs  toolbar.rs
