[package]
name = "chat_floem"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
serde = "1.0.214"
serde_json = "1.0.132"
ulid = { version = "1.1.3", features = [ "serde" ] }
tracing-lite = { path = "D:/libs/tracing-lite" }
chrono-lite = { path = "D:/libs/chrono-lite" }
# floem = "0.1.1"
floem = { path = "D:/libs/floem", default-features = false, features = [ "vello", "serde" ] }
# chat_util = { path = "D:/Programs/chat_util", features = [ "full", "sql", "gen" ] }