[workspace]
resolver = "2"
members = ["layout-gallery"]

[package]
name = "chat_floem"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
floem = { path = "D:/libs/floem", default-features = false, features = [ "vello", "serde", "editor" ] }



[dependencies]
floem = { workspace = true }
im = "15.1.0"
serde = "1.0.215"
serde_json = "1.0.133"
ulid = { version = "1.1.3", features = [ "serde" ] }
tracing-lite = { path = "D:/libs/tracing-lite" }
chrono-lite = { path = "D:/libs/chrono-lite", version = "0.0.3" }
# chat_util = { path = "D:/Programs/chat_util", features = [ "full", "sql", "gen" ] }